[package]
authors = ["leohowell.com@gmail.com"]
name = "pyo3-regex"
version = "0.1.0"
description = "Implements a regex is_match function in rust"
readme = "Readme.md"
edition = "2018"

[dependencies]
pyo3 = { version = "0.8.3", features = ["extension-module"] }
regex = { version = "1.3.1"}

[lib]
name = "pyo3_regex"
crate-type = ["cdylib"]
